Update index.html Update sass files Add favicon

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="AngularJS exercise.">
+    <meta name="robots" content="noindex, nofollow">
+
     <title>AngularJS Exercise</title>
 
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/image/favicon-bw-96x96.png" sizes="96x96">
 
     <script src="assets/js/angular.min.js"></script>
     <script src="app.js"></script>
